modif des noms du tableau

--- a/index.html
+++ b/index.html
@@ -52,14 +52,14 @@
 
     <table>
             <tr>
-                <td>Carmen</td>
-                <td>33 ans</td>
-                <td>Espagne</td>
+                <td>Caroline</td>
+                <td>27 ans</td>
+                <td>Danemark</td>
             </tr>
             <tr>
-                <td>Michelle</td>
-                <td>26 ans</td>
-                <td>États-Unis</td>
+                <td>Roger</td>
+                <td>36 ans</td>
+                <td>Suisse</td>
             </tr>
             <tr>
                 <td>Bob</td>
