ajout nom stations

--- a/index.html
+++ b/index.html
@@ -39,11 +39,12 @@
 
 
     <ul class="montagne">
-        <li> 1er element de la liste</li>
-        <li> 1er element de la liste</li>
-        <li>3eme element de la liste<ul>
-            <li> 1er element de la deuxieme liste</li>
-            <li> 2eme element de la deuxieme liste</li>
+        <li> alpe d'huez</li>
+        <li> morzine</li>
+        <li>val cenis<ul>
+            <li> lanslebourg</li>
+            <li> lanslevillard</li>
+            <li>ihgugu</li>
             </ul> 
         </li>
                 
