modif des noms ds table

--- a/index.html
+++ b/index.html
@@ -63,14 +63,14 @@
                 <td>Suisse</td>
             </tr>
             <tr>
-                <td>Bob</td>
+                <td>Ingrid</td>
                 <td>33 ans</td>
-                <td>Espagne</td>
+                <td>France</td>
                 </tr>
             <tr >
-                <td>Mike</td>
-                <td>26 ans</td>
-                <td>États-Unis</td>
+                <td>Epagneul</td>
+                <td>11 ans</td>
+                <td>Chien</td>
             </tr>
     </table>
 
